fixes responsive at 800x480, fixes footer text vertical alignment, makes footer year updated by the minute.
Improves scaleElementFontSize by calculating padding and border size of
parent element.

--- a/_assets/css/app/_footer.scss
+++ b/_assets/css/app/_footer.scss
@@ -15,23 +15,11 @@ html
 footer
 {
     font-size: 0;
-    line-height: 0;
     position: fixed;
     left: 0;
     right: 0;
-    bottom: $padding/2;
+    bottom: 20px;
     padding: 0 3%;
-
-    .left, .right
-    {
-        width: 50%;
-        display: inline-block;
-    }
-    
-    #app-name
-    {
-        margin-left: 20px;
-    }
 
     .right
     {
@@ -46,6 +34,16 @@ footer
         vertical-align: middle;
     }
 
+    span {
+        line-height: 1;
+    }
+
+    i {
+        line-height: 1;
+        font-style: normal;
+        margin-right:10px;
+    }
+
     .logo
     {
         width: 100%;
@@ -58,6 +56,7 @@ footer
 
     #footer-clock
     {
+        float: right;
         font-size: 54px;
         font-weight: 200;
         font-family: 'Kanit', sans-serif;
@@ -90,6 +89,7 @@ footer
         span, img
         {
             line-height: 1.3em;
+            font-size: 12px;
         }
 
         .logo
@@ -110,7 +110,11 @@ footer
 
         #footer-clock
         {
-            font-size: 30px;
+            font-size: 40px;
+        }
+
+        #powered-by {
+            display: block;
         }
     }
 }
