--- a/_assets/css/app/_section.central.scss
+++ b/_assets/css/app/_section.central.scss
@@ -54,7 +54,11 @@ section#central {
     }
 
     #location-today {
+        width: 50%;
+        max-width: 500px;
+        padding-right: 40px;
         margin-left: 20px;
+        line-height: 1;
         color: #123e51;
         font-size: 48px;
         font-weight: 600;
@@ -166,9 +170,9 @@ section#central {
                     display: inline-block;
                 }
 
-                &:first-of-type {
+/*                &:first-of-type {
                     margin-top: 96px;
-                }
+                }*/
 
                 b {
                     width: 33.333333%;
@@ -246,7 +250,9 @@ html.bg-night section#central #location-today {
         }
 
         #location-today {
-            /*font-size: 25px;*/
+            min-width: 310px;
+            margin-left: 9px;
+            margin-bottom: 20px;
         }
 
         #temperatures {}
@@ -301,7 +307,8 @@ html.bg-night section#central #location-today {
             NEXT DAYS PREVISION
         */
         #next-days {
-            font-size: 40px;
+
+            font-size: 31px;
 
             ul {
                 padding: 0;
@@ -313,7 +320,7 @@ html.bg-night section#central #location-today {
                     &:after {}
 
                     &:first-of-type {
-                        margin-top: 30px;
+                        /*margin-top: 30px;*/
                     }
 
                     b {
@@ -357,8 +364,12 @@ html.bg-night section#central #location-today {
         }
 
         #location-today {
-            margin-bottom: 40px;
-            margin-left: 8px;
+            width: 100%;
+            min-width: 0;
+            display: block;
+            text-align: center;
+            padding: 0 0 0 5px;
+            margin: 0 auto 40px;
         }
 
         #temperatures {}
@@ -395,6 +406,7 @@ html.bg-night section#central #location-today {
             NEXT DAYS PREVISION
         */
         #next-days {
+
             ul {
                 li {
                     &:after {}
